fix: vv-menu z-index value

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -6,7 +6,7 @@
   background: $white;
   display: flex;
   flex-direction: column;
-  z-index: 9999;
+  z-index: 99999;
   border-right: 1px solid $gray-dark2;
   width: 80%;
   max-width: 350px;
